# pylobe

./: README.md  pyproject.toml  requirements.txt  setup.py
examples/: antenna_structures.py  basic_antenna_design.py  design_workflow.py  dipole_simulation.py  fdtd_patch.py  multi_antenna_comparison.py  optimization_example.py  patch_antenna_design.py  pattern_dashboard.py  yagi_uda_array.py
pylobe/: __init__.py  constants.py  design.py
pylobe/ai/: __init__.py  dataset.py  inverse_design.py  surrogate.py
pylobe/analysis/: __init__.py  currents.py  lobe.py  metrics.py  nearfield.py  radiation.py  sensitivity.py  smith.py  tolerance.py
pylobe/export/: __init__.py  dxf_export.py  gdsii_export.py  report.py
pylobe/geometry/: __init__.py  array.py  base.py  dipole.py  export.py  fractal.py  horn.py  loop.py  lpda.py  monopole.py  patch.py  pifa.py  slot.py  yagi.py
pylobe/optimization/: __init__.py  base_optimizer.py  bayesian.py  differential_evolution.py  genetic.py  objectives.py  pso.py
pylobe/solver/: __init__.py
pylobe/solver/analytical/: __init__.py  array_factor.py  dipole_solver.py  folded_dipole_solver.py  horn_solver.py  loop_solver.py  monopole_solver.py  patch_solver.py  slot_solver.py  yagi_solver.py
pylobe/solver/fdtd/: __init__.py  farfield.py  grid.py  pml.py  probes.py  sources.py  update_equations.py
pylobe/solver/mom/: __init__.py  green_function.py  impedance_matrix.py  wire.py
pylobe/utils/: __init__.py  coordinates.py  signal.py  validation.py
pylobe/visualization/: __init__.py  cartesian.py  current_plot.py  dashboard.py  heatmap.py  lobe3d.py  nearfield_plot.py  polar.py  smith_chart.py  structure.py  style.py
tests/: test_analytical.py  test_fdtd.py  test_geometry.py  test_lobe.py  test_mom.py  test_optimization.py  test_visualization.py
